# picturs

./: .gitignore  Cargo.toml  DESIGN.md  README.md  diagram.pest  nested.pest  pic.pest  picturs.pest  sample.pic  sonar-project.properties
.github/workflows/: rust.yml
src/: diagram.rs  lib.rs  main.rs  nested.pest  nested.rs  pic.pest  pic.rs  skia.rs  test.rs  trig.rs  types.rs
src/diagram/: attributes.rs  bounds.rs  conversion.rs  edges.rs  index.rs  mod.rs  parser.rs  renderer.rs  rules.rs  types.rs
src/diagram/conversion/: tests.rs
src/diagram/parser/: tests.rs
src/diagram/types/: tests.rs
tests/: TUTORIAL.md  diagram.rs  edges.rs  hello.rs  layout.rs  nested.rs  resvg.rs  rules.rs  shapes.rs  simple.rs  skia.rs  tests.rs  train.pic  trig.rs  types.rs  units.rs
tests/common/: mod.rs
tests/doc/: align.rs  edges.rs  placement.rs  spacing.rs
tests/pic/: nested.pic  nested_pic.rs  simple.rs
tests/visual/: diagram.rs  edges.rs  flow.rs  hello.rs  real_world.rs  units.rs
