[package]
name = "picturs"
version = "0.1.0"
edition = "2021"

[features]
default = []
textlayout = ["skia-safe/textlayout"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
env_logger = "0.11"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { version = "0.88.0", features = ["metal", "textlayout"] }

[target.'cfg(target_os = "linux")'.dependencies]
skia-safe = { version = "0.88.0", features = ["x11", "textlayout"] }
